remove combobox openess

--- a/prosto_ogon/index.html
+++ b/prosto_ogon/index.html
@@ -100,8 +100,8 @@
                                         </svg>
                                     </button>
                                 </div>
-                                <!--combobox__dropdown-content_opened - класс для открытия комбобокса-->
-                                <div class="combobox__dropdown-content">
+                                <!-- combobox__dropdown-content_opened - класс для открытия комбобокса -->
+                                <div class="combobox__dropdown-content with-custom-scrollbar">
                                     <ul class="combobox__dropdown-content__list">
                                         <li>
                                             <label
