added birthdays mail

--- a/prosto_ogon/index.html
+++ b/prosto_ogon/index.html
@@ -683,7 +683,7 @@
 
                             <!-- Модалка с информацией о благодарности -->
                             <!-- modal_is-open - класс открытия модалки -->
-                            <div class="modal thanks-modal">
+                            <div class="modal modal_is-open thanks-modal">
                                 <div class="modal__content thanks-modal__content">
                                     <div class="thanks-modal__author user-label">
                                         <div
