--- a/prosto_ogon/widgets.html
+++ b/prosto_ogon/widgets.html
@@ -12,7 +12,7 @@
         <main class="main">
             <section class="widgets">
                 <!-- вертикальный виджет с 1 багодарностью -->
-                <div class="widget-1">
+                <!-- <div class="widget-1">
                     <img class="widget-1__bg" src="./images/widget-1.jpg" alt="Баннер" />
                     <div class="widget-1__card">
                         <div class="widget-1__user">
@@ -34,50 +34,167 @@
                         </p>
                     </div>
                     <a class="widget-1__link" href="#">Поблагодарить коллег</a>
-                </div>
+                </div> -->
 
                 <!-- вертикальный виджет с 2 багодарностями -->
                 <div class="widget-2">
                     <img class="widget-2__bg" src="./images/widget-2.jpg" alt="Баннер" />
                     <ul class="widget-2__list">
                         <li class="widget-2__card">
-                            <div class="widget-2__user">
-                                <div
-                                    class="widget-2__card-avatar"
-                                    style="background-color: #f9a825"
-                                >
-                                    <img
-                                        class="cover-image"
-                                        src="./images/avatar-1.jpg"
-                                        alt="Аватар-1"
-                                    />
-                                    <span class="widget-2__card-avatar-name">НР</span>
-                                </div>
-                                <div class="widget-2__card-about">
-                                    <p class="widget-2__card-name">Гузель Ахмадулина</p>
-                                </div>
-                            </div>
+                            <ul class="widget-2__avatars">
+                                <li style="z-index: 3">
+                                    <div class="widget-2__avatars-item">
+                                        <div
+                                            class="widget-2__avatars-item-avatar"
+                                            style="background-color: #f9a825"
+                                        >
+                                            <img
+                                                class="cover-image"
+                                                src="./images/avatar-1.jpg"
+                                                alt="Аватар-1"
+                                            />
+                                            <span class="widget-2__avatars-item-name">НР</span>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li style="z-index: 2">
+                                    <div class="widget-2__avatars-item">
+                                        <div
+                                            class="widget-2__avatars-item-avatar"
+                                            style="background-color: #f9a825"
+                                        >
+                                            <img
+                                                class="cover-image"
+                                                src="./images/avatar-1.jpg"
+                                                alt="Аватар-1"
+                                            />
+                                            <span class="widget-2__avatars-item-name">НР</span>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li style="z-index: 1">
+                                    <div class="widget-2__avatars-item">
+                                        <div
+                                            class="widget-2__avatars-item-avatar"
+                                            style="background-color: #f9a825"
+                                        >
+                                            <img
+                                                class="cover-image"
+                                                src="./images/avatar-1.jpg"
+                                                alt="Аватар-1"
+                                            />
+                                            <span class="widget-2__avatars-item-name">НР</span>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+
                             <p class="widget-2__card-text">
-                                Огромное спасибо за поддержку в проекте. Ты лучший!
+                                Поражаюсь твоей внимательности к деталям и глубокой экспертизе.
                             </p>
                         </li>
                         <li class="widget-2__card">
-                            <div class="widget-2__user">
-                                <div
-                                    class="widget-2__card-avatar"
-                                    style="background-color: #f9a825"
-                                >
-                                    <img
-                                        class="cover-image"
-                                        src="./images/avatar-1.jpg"
-                                        alt="Аватар-1"
-                                    />
-                                    <span class="widget-2__card-avatar-name">НР</span>
-                                </div>
-                                <div class="widget-2__card-about">
-                                    <p class="widget-2__card-name">Эдуард Когнитивченко</p>
-                                </div>
-                            </div>
+                            <ul class="widget-2__avatars">
+                                <li style="z-index: 3">
+                                    <div class="widget-2__avatars-item">
+                                        <div
+                                            class="widget-2__avatars-item-avatar"
+                                            style="background-color: #f9a825"
+                                        >
+                                            <img
+                                                class="cover-image"
+                                                src="./images/avatar-1.jpg"
+                                                alt="Аватар-1"
+                                            />
+                                            <span class="widget-2__avatars-item-name">НР</span>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li style="z-index: 2">
+                                    <div class="widget-2__avatars-item">
+                                        <div
+                                            class="widget-2__avatars-item-avatar"
+                                            style="background-color: #f9a825"
+                                        >
+                                            <img
+                                                class="cover-image"
+                                                src="./images/avatar-1.jpg"
+                                                alt="Аватар-1"
+                                            />
+                                            <span class="widget-2__avatars-item-name">НР</span>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li style="z-index: 1">
+                                    <div class="widget-2__avatars-item">
+                                        <div
+                                            class="widget-2__avatars-item-avatar"
+                                            style="background-color: #f9a825"
+                                        >
+                                            <img
+                                                class="cover-image"
+                                                src="./images/avatar-1.jpg"
+                                                alt="Аватар-1"
+                                            />
+                                            <span class="widget-2__avatars-item-name">НР</span>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+
+                            <p class="widget-2__card-text">
+                                Поражаюсь твоей внимательности к деталям и глубокой экспертизе.
+                            </p>
+                        </li>
+                        <li class="widget-2__card">
+                            <ul class="widget-2__avatars">
+                                <li style="z-index: 3">
+                                    <div class="widget-2__avatars-item">
+                                        <div
+                                            class="widget-2__avatars-item-avatar"
+                                            style="background-color: #f9a825"
+                                        >
+                                            <img
+                                                class="cover-image"
+                                                src="./images/avatar-1.jpg"
+                                                alt="Аватар-1"
+                                            />
+                                            <span class="widget-2__avatars-item-name">НР</span>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li style="z-index: 2">
+                                    <div class="widget-2__avatars-item">
+                                        <div
+                                            class="widget-2__avatars-item-avatar"
+                                            style="background-color: #f9a825"
+                                        >
+                                            <img
+                                                class="cover-image"
+                                                src="./images/avatar-1.jpg"
+                                                alt="Аватар-1"
+                                            />
+                                            <span class="widget-2__avatars-item-name">НР</span>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li style="z-index: 1">
+                                    <div class="widget-2__avatars-item">
+                                        <div
+                                            class="widget-2__avatars-item-avatar"
+                                            style="background-color: #f9a825"
+                                        >
+                                            <img
+                                                class="cover-image"
+                                                src="./images/avatar-1.jpg"
+                                                alt="Аватар-1"
+                                            />
+                                            <span class="widget-2__avatars-item-name">НР</span>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+
                             <p class="widget-2__card-text">
                                 Поражаюсь твоей внимательности к деталям и глубокой экспертизе.
                             </p>
@@ -88,7 +205,7 @@
                 </div>
 
                 <!-- горизонтальный виджет с 3 багодарностями -->
-                <div class="widget-3">
+                <!-- <div class="widget-3">
                     <img class="widget-3__bg" src="./images/widget-3.jpg" alt="Баннер" />
                     <a class="widget-3__link" href="#">Поблагодарить коллег</a>
 
@@ -158,7 +275,7 @@
                             </p>
                         </li>
                     </ul>
-                </div>
+                </div> -->
             </section>
         </main>
     </body>
