added spa events

--- a/spa/index.html
+++ b/spa/index.html
@@ -8,6 +8,114 @@
         <title>СПА</title>
     </head>
     <body class="root">
-        <div class="arrow-btn-container"><button>Назад</button><button>Вперед</button></div>
+        <div class="news-template-assets_likes">Нравится</div>
+
+        <div class="news-template-tags">
+            <div class="news-template-tags-article">Теги</div>
+            <div class="news-template-tags-items">
+                <div class="news-template-tags-item">тег1</div>
+                <div class="news-template-tags-item">тег2</div>
+            </div>
+        </div>
+
+        <div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus quae eius commodi, soluta
+            quo debitis, veniam explicabo exercitationem sint nostrum sapiente suscipit tempore
+            nobis temporibus dolore sunt nulla dolorum praesentium! Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Natus quae eius commodi, soluta quo debitis, veniam
+            explicabo exercitationem sint nostrum sapiente suscipit tempore nobis temporibus dolore
+            sunt nulla dolorum praesentium! Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Natus quae eius commodi, soluta quo debitis, veniam explicabo exercitationem sint
+            nostrum sapiente suscipit tempore nobis temporibus dolore sunt nulla dolorum
+            praesentium! Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus quae eius
+            commodi, soluta quo debitis, veniam explicabo exercitationem sint nostrum sapiente
+            suscipit tempore nobis temporibus dolore sunt nulla dolorum praesentium! Lorem ipsum
+            dolor sit amet consectetur adipisicing elit. Natus quae eius commodi, soluta quo
+            debitis, veniam explicabo exercitationem sint nostrum sapiente suscipit tempore nobis
+            temporibus dolore sunt nulla dolorum praesentium! Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Natus quae eius commodi, soluta quo debitis, veniam explicabo
+            exercitationem sint nostrum sapiente suscipit tempore nobis temporibus dolore sunt nulla
+            dolorum praesentium! Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus quae
+            eius commodi, soluta quo debitis, veniam explicabo exercitationem sint nostrum sapiente
+            suscipit tempore nobis temporibus dolore sunt nulla dolorum praesentium! Lorem ipsum
+            dolor sit amet consectetur adipisicing elit. Natus quae eius commodi, soluta quo
+            debitis, veniam explicabo exercitationem sint nostrum sapiente suscipit tempore nobis
+            temporibus dolore sunt nulla dolorum praesentium! Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Natus quae eius commodi, soluta quo debitis, veniam explicabo
+            exercitationem sint nostrum sapiente suscipit tempore nobis temporibus dolore sunt nulla
+            dolorum praesentium! Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus quae
+            eius commodi, soluta quo debitis, veniam explicabo exercitationem sint nostrum sapiente
+            suscipit tempore nobis temporibus dolore sunt nulla dolorum praesentium! Lorem ipsum
+            dolor sit amet consectetur adipisicing elit. Natus quae eius commodi, soluta quo
+            debitis, veniam explicabo exercitationem sint nostrum sapiente suscipit tempore nobis
+            temporibus dolore sunt nulla dolorum praesentium! Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Natus quae eius commodi, soluta quo debitis, veniam explicabo
+            exercitationem sint nostrum sapiente suscipit tempore nobis temporibus dolore sunt nulla
+            dolorum praesentium! Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus quae
+            eius commodi, soluta quo debitis, veniam explicabo exercitationem sint nostrum sapiente
+            suscipit tempore nobis temporibus dolore sunt nulla dolorum praesentium! Lorem ipsum
+            dolor sit amet consectetur adipisicing elit. Natus quae eius commodi, soluta quo
+            debitis, veniam explicabo exercitationem sint nostrum sapiente suscipit tempore nobis
+            temporibus dolore sunt nulla dolorum praesentium! Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Natus quae eius commodi, soluta quo debitis, veniam explicabo
+            exercitationem sint nostrum sapiente suscipit tempore nobis temporibus dolore sunt nulla
+            dolorum praesentium! Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus quae
+            eius commodi, soluta quo debitis, veniam explicabo exercitationem sint nostrum sapiente
+            suscipit tempore nobis temporibus dolore sunt nulla dolorum praesentium! Lorem ipsum
+            dolor sit amet consectetur adipisicing elit. Natus quae eius commodi, soluta quo
+            debitis, veniam explicabo exercitationem sint nostrum sapiente suscipit tempore nobis
+            temporibus dolore sunt nulla dolorum praesentium! Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Natus quae eius commodi, soluta quo debitis, veniam explicabo
+            exercitationem sint nostrum sapiente suscipit tempore nobis temporibus dolore sunt nulla
+            dolorum praesentium! Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus quae
+            eius commodi, soluta quo debitis, veniam explicabo exercitationem sint nostrum sapiente
+            suscipit tempore nobis temporibus dolore sunt nulla dolorum praesentium! Lorem ipsum
+            dolor sit amet consectetur adipisicing elit. Natus quae eius commodi, soluta quo
+            debitis, veniam explicabo exercitationem sint nostrum sapiente suscipit tempore nobis
+            temporibus dolore sunt nulla dolorum praesentium! Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Natus quae eius commodi, soluta quo debitis, veniam explicabo
+            exercitationem sint nostrum sapiente suscipit tempore nobis temporibus dolore sunt nulla
+            dolorum praesentium! Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus quae
+            eius commodi, soluta quo debitis, veniam explicabo exercitationem sint nostrum sapiente
+            suscipit tempore nobis temporibus dolore sunt nulla dolorum praesentium! temporibus
+            dolore sunt nulla dolorum praesentium! Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Natus quae eius commodi, soluta quo debitis, veniam explicabo
+            exercitationem sint nostrum sapiente suscipit tempore nobis temporibus dolore sunt nulla
+            dolorum praesentium! Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus quae
+            eius commodi, soluta quo debitis, veniam explicabo exercitationem sint nostrum sapiente
+            suscipit tempore nobis temporibus dolore sunt nulla dolorum praesentium! Lorem ipsum
+            dolor sit amet consectetur adipisicing elit. Natus quae eius commodi, soluta quo
+            debitis, veniam explicabo exercitationem sint nostrum sapiente suscipit tempore nobis
+            temporibus dolore sunt nulla dolorum praesentium! Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Natus quae eius commodi, soluta quo debitis, veniam explicabo
+            exercitationem sint nostrum sapiente suscipit tempore nobis temporibus dolore sunt nulla
+            dolorum praesentium! Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus quae
+            eius commodi, soluta quo debitis, veniam explicabo exercitationem sint nostrum sapiente
+            suscipit tempore nobis temporibus dolore sunt nulla dolorum praesentium! Lorem ipsum
+            dolor sit amet consectetur adipisicing elit. Natus quae eius commodi, soluta quo
+            debitis, veniam explicabo exercitationem sint nostrum sapiente suscipit tempore nobis
+            temporibus dolore sunt nulla dolorum praesentium! Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Natus quae eius commodi, soluta quo debitis, veniam explicabo
+            exercitationem sint nostrum sapiente suscipit tempore nobis temporibus dolore sunt nulla
+            dolorum praesentium! Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus quae
+            eius commodi, soluta quo debitis, veniam explicabo exercitationem sint nostrum sapiente
+            suscipit tempore nobis temporibus dolore sunt nulla dolorum praesentium! Lorem ipsum
+            dolor sit amet consectetur adipisicing elit. Natus quae eius commodi, soluta quo
+            debitis, veniam explicabo exercitationem sint nostrum sapiente suscipit tempore nobis
+            temporibus dolore sunt nulla dolorum praesentium! Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Natus quae eius commodi, soluta quo debitis, veniam explicabo
+            exercitationem sint nostrum sapiente suscipit tempore nobis temporibus dolore sunt nulla
+            dolorum praesentium! Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus quae
+            eius commodi, soluta quo debitis, veniam explicabo exercitationem sint nostrum sapiente
+            suscipit tempore nobis temporibus dolore sunt nulla dolorum praesentium! Lorem ipsum
+            dolor sit amet consectetur adipisicing elit. Natus quae eius commodi, soluta quo
+            debitis, veniam explicabo exercitationem sint nostrum sapiente suscipit tempore nobis
+            temporibus dolore sunt nulla dolorum praesentium! Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Natus quae eius commodi, soluta quo debitis, veniam explicabo
+            exercitationem sint nostrum sapiente suscipit tempore nobis temporibus dolore sunt nulla
+            dolorum praesentium! Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus quae
+            eius commodi, soluta quo debitis, veniam explicabo exercitationem sint nostrum sapiente
+            suscipit tempore nobis temporibus dolore sunt nulla dolorum praesentium!
+        </div>
     </body>
 </html>
